src/objects/UserAttributes__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>AssignedPrograms__c</fullName>
        <description>Programs that an EC can be assigned to for Lead Assignment.</description>
        <inlineHelpText>Programs that an EC can be assigned to for Lead Assignment.</inlineHelpText>
        <label>Assigned Programs</label>
        <picklist>
            <controllingField>CollegeTeam__c</controllingField>
            <picklistValues>
                <fullName>BA Early Childhood Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Educational Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Interdisciplinary Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Mathematics 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Mathematics 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science Biology 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science Chemistry 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science Geoscience 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science Physics 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Business Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Health Informatics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS HR Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Network Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Networks Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Marketing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Nursing- Prelicensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Nursing- RN to BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Sales and Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA Educational Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA English Language Learning PK-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA Mathematics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AssignmentMultiplier__c</fullName>
        <label>Assignment Multiplier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollegeTeam__c</fullName>
        <label>College Team</label>
        <picklist>
            <picklistValues>
                <fullName>Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Enrollment Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Undergrad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Prelicensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College El Ed/SoSci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College Math/Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College MEd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DirectPhoneNumber__c</fullName>
        <label>Direct Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JsonConfigData__c</fullName>
        <description>A JSON Configuration String for Visualforce/Javascript purposes, the context and semantics of which should be dictated by RecordTypeId</description>
        <inlineHelpText>This field is typically not designed for manual editing</inlineHelpText>
        <label>JsonConfigData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal800Number__c</fullName>
        <label>Personal 800 Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PreferredFirstName__c</fullName>
        <label>Preferred First Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredLastName__c</fullName>
        <label>Preferred Last Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAPercentage__c</fullName>
        <description>Percentage to be used with objects to put into QA</description>
        <label>QA Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <description>Field that can be related to any other object by Record Id</description>
        <externalId>true</externalId>
        <label>Related To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University800Number__c</fullName>
        <defaultValue>&quot;(866) 225-5948&quot;</defaultValue>
        <label>University 800 number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>Pulls the email down from user.</description>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Attributes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QAPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EnrollmentTeam</fullName>
        <columns>NAME</columns>
        <columns>CollegeTeam__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AssignmentMultiplier__c</columns>
        <columns>AssignedPrograms__c</columns>
        <columns>University800Number__c</columns>
        <columns>Extension__c</columns>
        <columns>PreferredFirstName__c</columns>
        <columns>PreferredLastName__c</columns>
        <columns>JobTitle__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UserAttributes__c.EnrollmentTeam</value>
        </filters>
        <label>Enrollment Team</label>
        <sharedTo>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enrollment_Team</fullName>
        <columns>NAME</columns>
        <columns>CollegeTeam__c</columns>
        <columns>PreferredFirstName__c</columns>
        <columns>PreferredLastName__c</columns>
        <columns>JobTitle__c</columns>
        <columns>AssignedPrograms__c</columns>
        <columns>University800Number__c</columns>
        <columns>Extension__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UserAttributes__c.EnrollmentTeam</value>
        </filters>
        <filters>
            <field>CollegeTeam__c</field>
            <operation>contains</operation>
            <value>Graduate</value>
        </filters>
        <label>Enrollment Team CoB MBA</label>
        <sharedTo>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enrollment_Team_BizUG</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>AssignmentMultiplier__c</columns>
        <columns>CollegeTeam__c</columns>
        <columns>AssignedPrograms__c</columns>
        <columns>University800Number__c</columns>
        <columns>Extension__c</columns>
        <columns>PreferredFirstName__c</columns>
        <columns>PreferredLastName__c</columns>
        <columns>JobTitle__c</columns>
        <columns>User__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UserAttributes__c.EnrollmentTeam</value>
        </filters>
        <filters>
            <field>CollegeTeam__c</field>
            <operation>contains</operation>
            <value>Prel,Health</value>
        </filters>
        <label>Enrollment Team (Health Professions)</label>
        <sharedTo>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enrollment_Team_Math_Sci</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>AssignmentMultiplier__c</columns>
        <columns>CollegeTeam__c</columns>
        <columns>AssignedPrograms__c</columns>
        <columns>University800Number__c</columns>
        <columns>Extension__c</columns>
        <columns>PreferredFirstName__c</columns>
        <columns>PreferredLastName__c</columns>
        <columns>JobTitle__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UserAttributes__c.EnrollmentTeam</value>
        </filters>
        <filters>
            <field>CollegeTeam__c</field>
            <operation>contains</operation>
            <value>math</value>
        </filters>
        <label>Enrollment Team (Math/Sci)</label>
        <sharedTo>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enrollment_Team_New</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>AssignmentMultiplier__c</columns>
        <columns>CollegeTeam__c</columns>
        <columns>AssignedPrograms__c</columns>
        <columns>University800Number__c</columns>
        <columns>Extension__c</columns>
        <columns>PreferredFirstName__c</columns>
        <columns>PreferredLastName__c</columns>
        <columns>JobTitle__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UserAttributes__c.EnrollmentTeam</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2013 12:00 AM</value>
        </filters>
        <label>Enrollment Team (New)</label>
        <sharedTo>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FinaidUsers</fullName>
        <columns>NAME</columns>
        <columns>QAPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QAPercentage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Finaid Users</label>
        <sharedTo>
            <role>DirectorFinancialAid</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserAttributes</pluralLabel>
    <recordTypes>
        <fullName>EnrollmentTeam</fullName>
        <active>true</active>
        <description>Attributes as they pertain to the enrollment team</description>
        <label>Enrollment Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentors</fullName>
        <active>true</active>
        <label>Mentors</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyCoursesGridPanel</fullName>
        <active>true</active>
        <description>A View Config for MyStudents.page (Course Mentor)</description>
        <label>MyCoursesGridPanel</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyStudentsGridPanel</fullName>
        <active>true</active>
        <description>A View Config for MyStudents.page (Student Mentor)</description>
        <label>MyStudentsGridPanel</label>
    </recordTypes>
    <recordTypes>
        <fullName>SearchGridPanel</fullName>
        <active>true</active>
        <description>A View Config for MyStudents.page (Search Panel)</description>
        <label>SearchGridPanel</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>